--- a/flask/fundamentals/hello_world/templates/index.html
+++ b/flask/fundamentals/hello_world/templates/index.html
@@ -1,13 +1,30 @@
-<h1>Hello Flask</h1>
-<h3>My Flask Template</h3>
-<p>Phrase: {{ phrase}}</p>
-<p>Times: {{ times}}</p>
-
-
-{% for x in range(0,times): %} 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='/css/style.css') }}">
+    <title>Document</title>
+</head>
+<body>
+    
+    <h1>Hello Flask</h1>
+    <h3>My Flask Template</h3>
+    <p>Phrase: {{ phrase}}</p>
+    <p>Times: {{ times}}</p>
+    
+    
+    {% for x in range(0,times): %} 
     <p>{{ phrase }}</p>
-{% endfor %} 
-
-{% if phrase == "hello" %}
+    {% endfor %} 
+    
+    {% if phrase == "hello" %}
     <p>The phrase says "hello"</p>
-{% endif %} 
+    {% endif %} 
+    
+    
+    
+    
+</body>
+</html>
