--- a/flask/fundamentals/form_test/templates/show.html
+++ b/flask/fundamentals/form_test/templates/show.html
@@ -8,3 +8,7 @@
     <input type='submit' value='create user'>
 </form>
 
+<h1>User:</h1>
+<h3>{{session['username']}}</h3>
+<h3>{{session['useremail']}}</h3>
+
